--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔥 Animated Text 🔥</title>
+    <title>🔥 SKIBIDI ON FIRE 🔥</title>
     <style>
         @keyframes fire {
             0% { text-shadow: 0 0 10px orange, 0 0 20px red; }
